# test_task_luna

./: .envexample  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  dockerfile  entrypoint.sh  pyproject.toml
src/: alembic.ini  config.py  loger_init.py  main.py  test_data.py
src/alembic/: env.py
src/alembic/versions/: 07f8357a1a12_init.py
src/api/: __init__.py
src/api/v1/: __init__.py  area.py  auth.py  buildings.py  health.py  organizations.py  router.py
src/db/models/: __init__.py  activity.py  associations.py  base.py  building.py  organization.py
src/db/repo/: __init__.py  activity.py  base.py  building.py  organization.py
src/dependencies/: __init__.py  db.py  services.py
src/exceptions/: __init__.py  base.py  errors.py
src/schemas/: __init__.py  base.py  organization.py
src/secure/: __init__.py  deps.py  token_service.py
src/services/: __init__.py  mixins.py  organization_service.py
