[project]
name = "test-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyjwt>=2.10.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.133.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.2",
    "sqlalchemy>=2.0.47",
    "uvicorn[standard]>=0.41.0",
]
